<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">OpenVK</string>
    <string name="title_activity_auth">Authorization screen</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">Not a valid username.</string>
    <string name="invalid_password">Not a valid password.</string>
    <string name="invalid_email_or_password">Not a valid email and password.</string>
    <string name="auth_unknown_error">Failed to connect to the instance for unknown reasons.</string>
    <string name="auth_error_not_openvk_instance">The specified server is not an OpenVK-compatible instance.</string>
    <string name="auth_instance_unavailable">This instance is currently unavailable.</string>
    <string name="auth_error_network">No Internet connection.</string>
    <string name="login_failed">"Login failed"</string>
    <string name="auth_instance">Instance</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>
    <string name="auth_sign_in">Sign in</string>
    <string name="auth_register">Register</string>
    <string name="auth_forgot_btn">Forgot password?</string>
    <string name="auth_wait">Please wait</string>
    <string name="twofactor_text">You have 2FA enabled.</string>
    <string name="auth_twofactor_code">2FA code</string>
    <string name="retry_btn">Retry</string>
    <string name="bottom_nav_home">Home</string>
    <string name="bottom_nav_messages">Messages</string>
    <string name="bottom_nav_profile">Profile</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_friends">Friends</string>
    <string name="nav_messages">Messages</string>
    <string name="nav_groups">Groups</string>
    <string name="nav_news">News</string>
    <string name="nav_settings">Settings</string>
    <string name="on_wall">%s on %s\'s wall</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="today_at">Today at</string>
    <string name="yesterday_at">Yesterday at</string>
    <string name="date_at">at</string>

    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="last_seen_profile_m">last seen %s</string>
    <string name="last_seen_profile_f">last seen %s</string>
    <string name="date_just_now">just now</string>

    <string name="error_no_internet">No Internet connection</string>
    <string name="error_parsing">Cannot process response</string>
    <string name="error_instance_failure">Instance failure</string>
    <string name="error_instance">Instance unavailable</string>
    <string name="error_instance_nrps">Instance is not responding</string>
    <string name="error_subtitle">Please check your network connection and try again.</string>
    <string name="error_subtitle_instance">Please try again later or contact system administrator.</string>

    <string name="my_news_item">Subscriptions</string>
    <string name="all_news_item">All news</string>

    <string name="your_last_message">You: %s</string>

    <string name="pref_application_category">Application</string>
    <string name="pref_video">Video</string>
    <string name="pref_video_player">Video player</string>
    <string name="pref_interface_category">Interface</string>
    <string name="pref_personalization">Personalization</string>
    <string name="pref_more">More</string>
    <string name="pref_appearance">Appearance</string>
    <string name="pref_accentcolor">Accent color</string>
    <string name="pref_darktheme">Dark theme</string>
    <string name="pref_darktheme_summary">Comfortable in the dark and for battery save</string>
    <string name="pref_avatars_shape">Avatars shape</string>
    <string name="pref_font">Font</string>
    <string name="pref_language">Language</string>
    <string name="pref_account">Account</string>
    <string name="pref_logout">Logout</string>
    <string name="pref_others">Others</string>
    <string name="pref_about_app">About application</string>

    <string name="loading">Loading…</string>
    <string name="error">Error</string>

    <string name="log_out_warning">Logging out will delete all data related to this account from this device. Continue?</string>
    <string name="sett_app_restart_required">The settings will take effect after restarting the application.</string>

    <string name="not_implemented">At the moment this feature is not implemented. Stay tuned.</string>
    <string name="not_supported">At the moment this feature is not supported. Stay tuned.</string>

    <string name="app_title" translatable="false">OpenVK Refresh</string>
    <string name="version_subtitle"><![CDATA[
    Version: %s<br>Commit: %s
    ]]></string>
    <string name="app_license_text">This program is free software: you may redistribute and/or
        modify it under the terms GNU (Affero) General Public License v3.0
        (https://www.gnu.org/licenses/agpl.txt)
        or a later version published by the Free Software Foundation.
        \n\nWITHOUT ANY WARRANTY, NOT EVEN FOR MERCHANTABILITY OR FITNESS FOR A PARTICULAR PURPOSE.
    </string>
    <string name="source_code_btn">Source code</string>
    <string name="enter_msg">Messenger</string>

    <string name="new_post_title">New post</string>
    <string name="whats_new_hint">Post text</string>
    <string name="send_item">Send</string>
    <string name="posting_error">An error occurred while posting. Please try again later.</string>
    <string name="posting_access_denied">You are not allowed to post on this wall.</string>
    <string name="posted_successfully">Post published.</string>

    <string name="video_err_decode">Your device can not play this video. Try selecting lower quality or play the video in a third party player.</string>

    <string name="profile_title">Profile</string>
    <string name="community_title">Community</string>
    <string name="owner_wall_tab">Wall</string>
    <string name="info_tab">Information</string>

    <string name="profile_info_contacts">Contacts</string>
    <string name="profile_telegram">Telegram</string>
    <string name="profile_info_education">Education</string>
    <string name="profile_school">School</string>
    <string name="profile_info_personal">Personal info</string>
    <string name="profile_occupation">Activities</string>
    <string name="profile_interests">Interests</string>
    <string name="profile_music">Favorite music</string>
    <string name="profile_movies">Favorite movies</string>
    <string name="profile_tv">Favorite TV shows</string>
    <string name="profile_games">Favorite games</string>
    <string name="profile_books">Favorite books</string>
    <string name="profile_quotations">Favorite quotes</string>
    <string name="profile_about">About</string>

    <string name="group_descr">Description</string>
    <string name="group_site">Website</string>
    <string name="privacy_link">Privacy</string>
    <string name="rules_link">Rules</string>

    <string name="pref_about_instance">About instance</string>
    <string name="server_address">Server:</string>
    <string name="connection_type">Connection type</string>
    <string name="secured_connection">Secured (HTTPS)</string>
    <string name="default_connection">Default (HTTP)</string>
    <string name="instance_version">Instance version:</string>
    <string name="instance_statistics">Statistics:</string>
    <string name="instance_users_count">%d users</string>
    <string name="instance_online_users_count">%d online users</string>
    <string name="instance_active_users_count">%d active users</string>
    <string name="instance_groups_count">%d groups</string>
    <string name="instance_wall_posts_count">%d wall posts</string>
    <string name="instance_admins_count">%d administrators</string>
    <string name="instance_links">Links:</string>
    <string name="connection_error">Connection error</string>
    <string name="comments_label">Comments</string>
    <string name="post_title">Post</string>
    <string name="reply_btn">Reply</string>
    <string name="video_player">Video</string>
    <string name="send_msg_btn">Message</string>
    <string name="profile_status">Status</string>
    <string name="ovk_warning_title">Warning</string>
    <string name="ovk_warning"><![CDATA[You have launched a OpenVK Refresh FOSS client that
    ONLY works with <a href="https://github.com/openvk/openvk">OpenVK</a> instances,
    an open source network that is not compatible with VKontakte / VK.<br><br>
    Please log in ONLY to the registered OpenVK account in one of the existing instances.]]></string>
    <string name="dont_show_warn">Don\'t show again</string>

    <string name="photo_title">Photo</string>

    <string name="save">Save</string>
    <string name="download">Download</string>
    <string name="copy_link">Copy link</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="leave_group">Leave community</string>

    <string name="photo_save_ok">The photo has been saved to the Device Memory</string>
    <string name="global_search_hint">Global search</string>

    <string name="friends_tab">Friends</string>
    <string name="friend_requests_tab">Requests</string>
    <string name="add_friend_button">Add</string>
    <string name="retry_dialog_btn">Retry</string>
    <string name="people_section">People (%d)</string>
    <string name="communities_section">Communities (%d)</string>
    <string name="delete_friend">Remove from friends</string>
</resources>