<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="interface_category"
        app:title="@string/pref_interface_category"
        app:iconSpaceReserved="false">

        <Preference
            app:key="interfaceFont"
            app:title="@string/pref_font"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="accentColor"
            app:title="@string/pref_accentcolor"
            app:iconSpaceReserved="false"/>

        <Preference
            app:key="avatarsShape"
            app:title="@string/pref_avatars_shape"
            app:iconSpaceReserved="false"/>

        <SwitchPreferenceCompat
            app:key="darkTheme"
            app:defaultValue="false"
            app:title="@string/pref_darktheme"
            app:summary="@string/pref_darktheme_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>