<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:key="appearance_category"
        app:title="@string/pref_appearance_category"
        app:iconSpaceReserved="false">

        <!--<Preference
            app:key="accentColor"
            app:title="@string/pref_accentcolor" />

        <SwitchPreferenceCompat
            app:key="darkTheme"
            app:defaultValue="false"
            app:title="@string/pref_darktheme"
            app:summary="@string/pref_darktheme_summary"/>
            !-->

        <Preference
            app:icon="@drawable/ic_personalization"
            app:key="personalization"
            app:singleLineTitle="true"
            app:title="@string/pref_personalization"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="others_category"
        app:title="@string/pref_account"
        app:iconSpaceReserved="false">
        <Preference
            app:icon="@drawable/ic_logout"
            app:key="logout"
            app:singleLineTitle="true"
            app:title="@string/pref_logout"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="others_category"
        app:title="@string/pref_others"
        app:iconSpaceReserved="false">
        <Preference
            app:icon="@drawable/ic_info"
            app:key="about_app"
            app:singleLineTitle="true"
            app:title="@string/pref_about_app"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>
</PreferenceScreen>