<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/credits_ll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/ovk_logo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.Round32"
                    app:srcCompat="@mipmap/ic_launcher" />

                <TextView
                    android:id="@+id/app_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title"
                    android:textColor="?android:attr/textColorPrimaryNoDisable"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/version_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:text="@string/version_subtitle" />

                <TextView
                    android:id="@+id/app_license"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:autoLink="web"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/app_license_text"
                    android:textAlignment="viewStart"
                    android:textColor="?android:attr/textColorPrimaryNoDisable"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <Button
                android:id="@+id/source_code_btn"
                style="@style/ApplicationTheme.Button.Borderless.NoCaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/source_code_btn"
                android:textColor="?attr/colorAccent" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>